--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.8.2",
     "express": "^4.16.3",
     "http": "0.0.0",
+    "node-uuid": "^1.4.8",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
