--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "azure-storage": "^2.8.2",
     "express": "^4.16.3",
+    "guid": "0.0.12",
     "http": "0.0.0",
     "node-uuid": "^1.4.8",
     "socket.io": "^2.1.0"
